# zeekstd

./: .gitignore  CHANGELOG.md  CHANGELOG_CLI.md  CHANGELOG_LIB.md  Cargo.toml  LICENSE  README.md  build.nix  flake.nix  seekable_format.md  test.nix
.github/: renovate.json
.github/workflows/: audit.yaml  build.yaml  linux.yaml  mac.yaml  nix.yaml  rust.yaml  windows.yaml
cli/: Cargo.toml  README.md
cli/assets/: kaestner.txt
cli/src/: args.rs  command.rs  compress.rs  decompress.rs  main.rs  tests.rs
cli/tests/integration/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: roundtrip_basic.rs  roundtrip_seek.rs
lib/: Cargo.toml
lib/benches/: compress.rs  decompress.rs
lib/src/: compress.rs  decode.rs  decompress.rs  encode.rs  error.rs  frame_log.rs  lib.rs  seek_table.rs  seekable.rs
src/: args.rs  bar.rs  command.rs  compress.rs  decompress.rs  lib.rs  list.rs  main.rs  progress.rs  tests.rs
tests/: cycle.nix  default.nix  list.nix  output.nix  partial.nix
