[workspace]
resolver = "2"
members = ["cli", "lib"]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
homepage = "https://github.com/rorosen/zeekstd"
repository = "https://github.com/rorosen/zeekstd"
readme = "README.md"
keywords = [ "zstd", "zstandard", "compression", "zstd-seekable-format" ]
categories = [ "compression" ]

[workspace.dependencies]
zstd-safe = { version = "7.2.4", features = ["std"] }
