[package]
name = "zeekstd_cli"
version = "0.4.1"
publish = false
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "zeekstd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
indicatif = "0.18.0"
memmap2 = "0.9.7"
zeekstd = { path = "../lib" }
zstd-safe.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.21.0"
