[package]
name = "zeekstd_cli"
version = "0.4.2"
publish = false
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "zeekstd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
memmap2 = "0.9.9"
zeekstd = { path = "../lib" }
zstd-safe.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
