[package]
name = "zeekstd-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zeekstd]
path = "../lib"

[[bin]]
name = "roundtrip_basic"
path = "fuzz_targets/roundtrip_basic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_seek"
path = "fuzz_targets/roundtrip_seek.rs"
test = false
doc = false
bench = false
