[package]
name = "zeekstd"
version = "0.5.1"
description = "Rust implementation of the Zstandard Seekable Format."
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zstd-safe = { workspace = true, features = ["std"] }

[dev-dependencies]
proptest = "1.7.0"

[dev-dependencies.zstd-safe]
workspace = true
features = ["seekable"]

[lints]
workspace = true
