[package]
name = "zeekstd"
version = "0.6.1"
description = "Rust implementation of the Zstandard Seekable Format."
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zstd-safe = { workspace = true }

[dev-dependencies]
proptest = "1.7.0"

[dev-dependencies.zstd-safe]
workspace = true
features = ["seekable"]

[features]
default = ["std"]

std = ["zstd-safe/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
