[package]
name = "zeekstd"
version = "0.6.2"
description = "Rust implementation of the Zstandard Seekable Format."
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zstd-safe = { workspace = true }

[dev-dependencies]
criterion = "0.8.1"
proptest = "1.9.0"
zstd = "0.13.3"

[dev-dependencies.zstd-safe]
workspace = true
features = ["seekable"]

[features]
default = ["std"]

std = ["zstd-safe/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "decompress"
harness = false
